[package]
name = "todo-cli"
version = "0.1.0"
edition = "2021"
authors = ["Manikya-Sharma"]
description = "A mini todo-cli app for learning purpose"
readme = "https://github.com/Manikya-Sharma/todo-cli"
repository = "https://github.com/Manikya-Sharma/todo-cli"
license = "MIT"

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
crossterm = "0.27.0"
ratatui = "0.25.0"
csv = "1.3.0"
dirs = "5.0.1"