[package]
name = "todo-cli-manikya"
version = "0.2.0"
edition = "2021"
authors = ["Manikya-Sharma"]
description = "A mini todo-cli app for learning purpose"
readme = "README.md"
repository = "https://github.com/Manikya-Sharma/todo-cli"
license = "MIT"

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
crossterm = "0.27.0"
ratatui = "0.25.0"
csv = "1.3.0"
dirs = "5.0.1"
fastrand = "2.0.1"
serde = { version = "1.0.194", features = ["derive"] }
cli-table = "0.4.7"
sublime_fuzzy = "0.7.0"
tui-widget-list = "0.6.0"
chrono = {version = "0.4.31", features = ["serde"]}
